--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
+    "@payloadcms/db-mongodb": "^3.0.0-beta.97",
+    "@payloadcms/db-postgres": "^3.0.0-beta.97",
+    "@payloadcms/db-sqlite": "^3.0.0-beta.97",
+    "@payloadcms/db-vercel-postgres": "beta",
     "@payloadcms/next": "beta",
     "@payloadcms/plugin-cloud": "beta",
     "@payloadcms/richtext-lexical": "beta",
+    "@payloadcms/richtext-slate": "^3.0.0-beta.97",
+    "@payloadcms/storage-s3": "^3.0.0-beta.97",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.0.0-canary.104",
+    "next-auth": "^5.0.0-beta.20",
     "payload": "beta",
     "react": "19.0.0-rc-06d0b89e-20240801",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
-    "sharp": "0.32.6",
-    "@payloadcms/db-vercel-postgres": "beta"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
